remove fixed positioning on navbar to allow logout functionality (this is a problem with z-index)

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -2,6 +2,7 @@
   position: absolute;
   top: 75px;
   right: 5px;
+  z-index: 9999;
 }
 
 .hidden {
@@ -9,7 +10,6 @@
 }
 
 .navbar {
-  position: fixed;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
